# cokacdir

./: CHANGELOG.md  Cargo.toml  DIFF_DESIGN.md  ENCRYPTION.md  KEY_BINDING.md  LICENSE  README.md  TELEGRAM_REMOTE_CONTROL.md  index.html  install.sh  package-lock.json  package.json  tsconfig.json
assets/: index-CnYswtPv.js
docs/: how-to-configure-settings.md  how-to-install-claude-code-on-windows.md  how-to-install-codex-on-windows.md  how-to-install.md  how-to-manage-requests.md  how-to-manage-tokens.md  how-to-manage-tools.md  how-to-set-instructions.md  how-to-setup-discord-bot.md  how-to-setup-telegram-bot.md  how-to-simulate-multiple-chats-with-one-bot.md  how-to-start-first-chat.md  how-to-update.md  how-to-use-file-transfer.md  how-to-use-group-chat.md  how-to-use-schedules.md  how-to-use-shell-commands.md  how-to-use-start-session-and-clear.md  provider-specs.md
src/: App.tsx  cli.tsx  config.rs  main.rs
src/components/: AICommandModal.tsx  ConfirmDialog.tsx  FileEditor.tsx  FileInfo.tsx  FileViewer.tsx  FunctionBar.tsx  InputDialog.tsx  Panel.tsx  SearchDialog.tsx  StatusBar.tsx
src/enc/: mod.rs
src/screens/: DiskUtils.tsx  DualPanel.tsx  FileManager.tsx  MainMenu.tsx  ProcessManager.tsx  SystemInfo.tsx
src/services/: bridge.rs  claude.rs  claude.ts  codex.rs  fileOps.ts  file_ops.rs  messenger_bridge.rs  mod.rs  opencode.rs  process.ts  telegram.rs
src/themes/: classic-blue.ts
src/types/: index.ts
src/ui/: ai_screen.rs  app.rs  dialogs.rs  diff_file_view.rs  diff_screen.rs  draw.rs  help.rs  image_viewer.rs  mod.rs  panel.rs  theme.rs  theme_loader.rs
src/utils/: format.ts  markdownRenderer.tsx  platform.ts
website/: index.html  package-lock.json
website/src/: App.tsx  index.css
website/src/components/: AIShowcase.tsx  Footer.tsx  Hero.tsx  TelegramShowcase.tsx
website/src/components/ec2/: EC2Page.tsx
website/src/components/macos/: MacOSPage.tsx
website/src/components/telegram-tutorial/: TelegramTutorialPage.tsx  TelegramTutorialSidebar.tsx
website/src/components/tutorial/: TutorialContent.tsx  TutorialSidebar.tsx
website/src/components/tutorial/sections/: AICommands.tsx  TelegramBot.tsx
website/src/components/windows/: WindowsPage.tsx
website/src/components/workflows/: WorkflowsPage.tsx
